test/data/semantic-errors/+-must-have-integer-operands.jen
x := 'I am not an integer. Please have mercy'
y := x + 5
